--- a/templates/actionPanel.html
+++ b/templates/actionPanel.html
@@ -18,6 +18,11 @@
         </div>
         <hr>
         <div class="row">
+            <div class="col-md-6"><button ng-click="VacOn()" class="btn btn-outline-primary btn-block">Vacuum On</button></div>
+            <div class="col-md-6"><button ng-click="VacOff()" class="btn btn-outline-primary btn-block">Vacuum Off</button></div>
+        </div>
+        <hr>
+        <div class="row">
             <div class="col-md-6">
                 <button ng-click="resume()" class="btn btn-outline-primary btn-block">Resume</button>
             </div>
