--- a/templates/wcsPanel.html
+++ b/templates/wcsPanel.html
@@ -36,9 +36,10 @@
         </div>
         <hr>
         <div class="row">
-                <div class="col-md-4"><button ng-click="homeX()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> X</button></div>
-                <div class="col-md-4"><button ng-click="homeY()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> Y</button></div>
-                <div class="col-md-4"><button ng-click="homeZ()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> Z</button></div>
+                <div class="col-md-3"><button ng-click="homeX()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> X</button></div>
+                <div class="col-md-3"><button ng-click="homeY()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> Y</button></div>
+                <div class="col-md-3"><button ng-click="homeZ()" class="btn btn-outline-primary btn-block"><i class="fa fa-home" aria-hidden="true"></i> Z</button></div>
+		<div class="col-md-3"><button ng-click="probeZ()" class="btn btn-outline-primary btn-block"><i class="fa fa-dot-circle-o" aria-hidden="true"></i></button></div>
         </div>
     </div>
 </div>
